# taktician

./: .dockerignore  .gitignore  .travis.yml  COPYING  Dockerfile  Gopkg.toml  Makefile  README.md  col333.sh  go.mod  go.sum  requirements.txt  setup.py  train.py
python/: .floydignore  .gitattributes  .gitignore  build-proto  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/bench/: load_data.py  mcts.py  probs.py  self_play.py  symmetry.py
python/data/graphs/: README  graph-1.data-00000-of-00001  graph-1.index  graph-2.data-00000-of-00001  graph-2.index  graph-3.data-00000-of-00001  graph-3.index
python/ext/: tak.cpp
python/proto/: model.proto
python/scripts/: allmoves.py  alpha_zero.py  analysis_server  build-3x3.py  encode_corpus  eval_models  evaluate-model.py  playtak-corpus  resume_alphazero  run-model  self_play.py  selfplay.py  tei  train.py  train_4x4.py  train_tak.py  write-features.py
python/tak/: __init__.py  encoding.py  game.py  mcts.py  moves.py  pieces.py  self_play.py
python/tak/alphazero/: __init__.py  cli.py  config.py  data.py  hooks.py  losses.py  model_process.py  schedule.py  stats.py  trainer.py
python/tak/model/: __init__.py  batches.py  encoding.py  evaluate.py  grpc.py  heads.py  losses.py  model.py  server.py  wrapper.py
python/tak/proto/: __init__.py  analysis_pb2.py  analysis_pb2_grpc.py  model_pb2.py  (+4 more)
python/test/: corpus.csv  test_data.py  test_encoding.py  test_game.py  test_mcts.py  test_move.py  test_pipeline.py  test_xformer.py  test_yaml.py
python/xformer/: __init__.py  loading.py  model.py  yaml_ext.py
(+302 files in other folders)
